fixlayout bugs

--- a/src/pages/news-info/ui/news-info.module.scss
+++ b/src/pages/news-info/ui/news-info.module.scss
@@ -2,7 +2,7 @@
 
 .container {
     min-height: 100%;
-    height: 80vh;
+    height: 600px;
     max-height: 100%;
     border-radius: 10px;
     overflow: hidden;
@@ -18,8 +18,6 @@
     background: var(--content-color);
     margin: 0 auto;
     border-radius: 10px;
-    max-height: 90vh;
-    height: 100%;
     font-family: Roboto, Arial, Helvetica, sans-serif;
     color: var(--highlight-color);
 
