--- a/src/shared/UI/layout/layout.module.scss
+++ b/src/shared/UI/layout/layout.module.scss
@@ -10,7 +10,7 @@
 .content,
 .footer,
 .header {
-    max-width: 1200px;
+    max-width: 1100px;
     margin: 0 auto;
     width: 100%;
     padding: 0;
